<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:minHeight="?attr/listPreferredItemHeight"
    android:transitionGroup="true">

    <LinearLayout
        android:id="@+id/music_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="@dimen/cover_size_mini"
            android:layout_height="@dimen/cover_size_mini"
            android:scaleType="centerCrop"
            tools:src="@drawable/album_cover_default"
            android:transitionName="@string/transition_name_cover"/>

        <TextView
            android:id="@+id/music_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/album_cover_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/inner_padding"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:transitionName="@string/transition_name_title"/>

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        </LinearLayout>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/inner_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:transitionName="@string/transition_name_duration"/>
    </LinearLayout>

</FrameLayout>