<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jp.ac.titech.itpro.sdl.runmusic.activities.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/change_feel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/feel_field_padding"
            android:text="@string/change_feel"
            android:textSize="20dp"
            android:background="@drawable/feel_button_style"
            android:onClick="onClickChangeFeelButton"/>

        <!--<TextView-->
            <!--android:id="@+id/start_running"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:text="@string/start_run"-->
            <!--android:textAlignment="center"-->
            <!--android:textSize="40dp" />-->

        <!--<TextView-->
            <!--android:id="@+id/param"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text=""-->
            <!--android:textAlignment="center"-->
            <!--android:textSize="12dp" />-->

        <TextView
            android:id="@+id/bpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/start_run"
            android:textAlignment="center"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="264dp"
            android:layout_height="264dp"
            android:text="@string/start"
            android:background="@drawable/wave_content_style"
            android:textSize="40dp"
            android:onClick="onClickStartButton" />

        <jp.ac.titech.itpro.sdl.runmusic.view.GraphView
            android:id="@+id/graph_view"
            android:layout_width="264dp"
            android:layout_height="264dp"
            android:layout_weight="1"
            android:background="@drawable/wave_content_style"
            android:visibility="gone"
            android:onClick="onClickPauseBtn"/>

        <Button
            android:id="@+id/pause_button"
            android:layout_width="264dp"
            android:layout_height="264dp"
            android:text="一時停止中"
            android:background="@drawable/wave_content_style"
            android:textSize="60dp"
            android:visibility="gone"
            android:onClick="onClickResumeBtn" />

    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/start_run_button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/start"-->
        <!--android:onClick="onClickStartButton2"/>-->
</LinearLayout>
